--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
+    "@types/p5": "^0.9.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "p5": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
