--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/p5": "^0.9.1",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/styled-components": "^5.1.10",
     "p5": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
